traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-proxy-next-upstream.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-proxy-next-upstream
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error http_400 non_idempotent"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-proxy-next-upstream-off
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream: "off"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
